refactor: change put to post request for creating new user
