# packages/backend/src/modules/User/infrastructure/api/userRoutes.ts
@@ -13,11 +13,11 @@ const router = Router();
 
 const controller: IController = userContainer.resolve('CreateUserController');
 
-router.put('/:id', CreateUserValidator, validateReqSchema, async (req: Request, res: Response, next: NextFunction) => {
+router.post('/', CreateUserValidator, validateReqSchema, async (req: Request, res: Response, next: NextFunction) => {
   /**
     #swagger.requestBody = {
         required: true,
-        schema: { $ref: "#/components/schemas/CreatePutRequest" }
+        schema: { $ref: "#/components/schemas/CreateUserRequest" }
     }
      */
   await controller.run(req, res, next);
